--- a/Frontend/Car Selection Page/Car-Selection-Page/src/index.html
+++ b/Frontend/Car Selection Page/Car-Selection-Page/src/index.html
@@ -22,6 +22,9 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   rel="stylesheet"
 />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 
 
   <!-- Google Font -->
